motif_assesment/slurm-690178.out
  File "motif_assesment_1.py", line 125
    fi.close()assesment_duckery(patterns_for_supercomp[1])
              ^
SyntaxError: invalid syntax
